--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 # Database URLS
-# Postgres 9,10,11,12
+# Postgres 9,10,11,12,13
 # DATABASE_URL="postgres://postgres:prisma@localhost:5431/postgres"
-DATABASE_URL="postgres://postgres:prisma@localhost:5432/postgres"
+# DATABASE_URL="postgres://postgres:prisma@localhost:5432/postgres"
 # DATABASE_URL="postgres://postgres:prisma@localhost:5433/postgres"
-# DATABASE_URL="postgres://postgres:prisma@localhost:5434/postgres"
+DATABASE_URL="postgres://postgres:prisma@localhost:5434/postgres"
+# DATABASE_URL="postgres://postgres:prisma@localhost:5435/postgres"
 
 #MySQL 5.6, 5.7, 8.0, Maria 10.0
 # DATABASE_URL="mysql://root:prisma@localhost:3309/prisma"
@@ -11,8 +12,9 @@ DATABASE_URL="postgres://postgres:prisma@localhost:5432/postgres"
 # DATABASE_URL="mysql://root:prisma@localhost:3307/prisma"
 # DATABASE_URL="mysql://root:prisma@localhost:3308/prisma"
 
-#MSSql
+#MSSql 2017, 2019
 # DATABASE_URL="sqlserver://localhost:1433;database=master;user=SA;password=<YourStrong@Passw0rd>;trustServerCertificate=true"
+# DATABASE_URL="sqlserver://localhost:1434;database=master;user=SA;password=<YourStrong@Passw0rd>;trustServerCertificate=true"
 
 #SQLite
 # DATABASE_URL="file:data.db"
