--- a/.env
+++ b/.env
@@ -1,13 +1,14 @@
 # Database URLS
+
 # Postgres 9,10,11,12,13
 # DATABASE_URL="postgres://postgres:prisma@localhost:5431/postgres"
 # DATABASE_URL="postgres://postgres:prisma@localhost:5432/postgres"
 # DATABASE_URL="postgres://postgres:prisma@localhost:5433/postgres"
-DATABASE_URL="postgres://postgres:prisma@localhost:5434/postgres"
+# DATABASE_URL="postgres://postgres:prisma@localhost:5434/postgres"
 # DATABASE_URL="postgres://postgres:prisma@localhost:5435/postgres"
 
 #MySQL 5.6, 5.7, 8.0, Maria 10.0
-# DATABASE_URL="mysql://root:prisma@localhost:3309/prisma"
+DATABASE_URL="mysql://root:prisma@localhost:3309/prisma"
 # DATABASE_URL="mysql://root:prisma@localhost:3306/prisma"
 # DATABASE_URL="mysql://root:prisma@localhost:3307/prisma"
 # DATABASE_URL="mysql://root:prisma@localhost:3308/prisma"
