--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "latest": "npm i @prisma/cli@dev && npm i @prisma/client@dev",
-        "prismation": "npx prisma generate && npx prisma migrate save --experimental && npx prisma migrate up --experimental"
+        "latest": "npm i prisma@dev && npm i @prisma/client@dev",
+        "archive": "mv ./migrations ./migrations_archive",
+        "test": "ts-node index.ts",
+        "reset": "npx prisma migrate reset --force"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@prisma/cli": "^2.6.0-dev.58",
-        "ts-node": "^8.6.2",
-        "typescript": "^3.8.3"
+        "prisma": "^2.19.0",
+        "ts-node": "^9.1",
+        "typescript": "^4.1"
     },
     "dependencies": {
-        "@prisma/client": "^2.6.0-dev.58"
+        "@prisma/client": "^2.19.0"
     }
 }
