update for mongo

--- a/.env
+++ b/.env
@@ -17,6 +17,10 @@ DATABASE_URL="postgres://postgres:prisma@localhost:5432/postgres"
 #SQLite
 # DATABASE_URL="file:data.db"
 
+#Mongo
+# DATABASE_URL="mongodb://prisma:prisma@mongo4-single:27017/"
+
+
 # Custom Binaries
 # PRISMA_QUERY_ENGINE_BINARY="/Users/matthias/repos/work/prisma-engine/target/debug/query-engine"
 # PRISMA_INTROSPECTION_ENGINE_BINARY="/Users/matthias/repos/work/prisma-engine/target/debug/query-engine"
