--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 version: "3"
 services:
+  cockroach:
+    image: otanatcockroach/cockroachdb-custom:v1
+    restart: always
+    command: start-single-node --insecure
+    ports:
+      - "5436:26257"
+    networks:
+      - databases
+
   pgbouncer:
     image: brainsam/pgbouncer:latest
     restart: always
@@ -26,7 +35,7 @@ services:
       - "5431:5432"
     networks:
       - databases
-    tmpfs: /pgtmpfs9
+    tmpfs: /pgtmpfs9:size=4g
 
   postgres10:
     image: postgres:10
@@ -39,7 +48,7 @@ services:
       - "5432:5432"
     networks:
       - databases
-    tmpfs: /pgtmpfs10
+    tmpfs: /pgtmpfs10:size=4g
 
   postgres11:
     image: postgres:11
@@ -52,7 +61,7 @@ services:
       - "5433:5432"
     networks:
       - databases
-    tmpfs: /pgtmpfs11
+    tmpfs: /pgtmpfs11:size=4g
 
   postgres12:
     image: postgres:12
@@ -65,7 +74,7 @@ services:
       - "5434:5432"
     networks:
       - databases
-    tmpfs: /pgtmpfs12
+    tmpfs: /pgtmpfs12:size=4g
 
   postgres13:
     image: postgres:13
@@ -78,10 +87,10 @@ services:
       - "5435:5432"
     networks:
       - databases
-    tmpfs: /pgtmpfs12
+    tmpfs: /pgtmpfs13:size=4g
 
   mysql-5-6:
-    image: mysql:5.6
+    image: mysql:5.6.50
     command: mysqld
     restart: always
     environment:
@@ -95,7 +104,7 @@ services:
     tmpfs: /var/lib/mysql
 
   mysql-5-7:
-    image: mysql:5.7
+    image: mysql:5.7.32
     command: mysqld
     restart: always
     environment:
@@ -109,7 +118,7 @@ services:
     tmpfs: /var/lib/mysql
 
   mysql-8-0:
-    image: mysql:8.0
+    image: mysql:8.0.22
     command: mysqld
     restart: always
     environment:
@@ -135,17 +144,142 @@ services:
       - databases
     tmpfs: /var/lib/mariadb
 
+  vitess-test-5_7:
+    image: vitess/vttestserver:mysql57@sha256:b1f8eed5d43e3836a65e2cb4b373441a92989bb44af0c352b195f058ce139c08
+    restart: always
+    ports:
+      - 33577:33577
+    environment:
+      PORT: 33574
+      KEYSPACES: "test"
+      NUM_SHARDS: "1"
+      MYSQL_BIND_HOST: "0.0.0.0"
+      FOREIGN_KEY_MODE: "disallow"
+
+  vitess-test-8_0:
+    image: vitess/vttestserver:mysql80@sha256:5fec546e3f2ba50237b78938982a72bf17eacbc97f18ab877774f22d6e2e9682
+    restart: always
+    ports:
+      - 33807:33807
+    environment:
+      PORT: 33804
+      KEYSPACES: "test"
+      NUM_SHARDS: "1"
+      MYSQL_BIND_HOST: "0.0.0.0"
+      FOREIGN_KEY_MODE: "disallow"
+
+  vitess-shadow-5_7:
+    image: vitess/vttestserver:mysql57@sha256:b1f8eed5d43e3836a65e2cb4b373441a92989bb44af0c352b195f058ce139c08
+    restart: always
+    ports:
+      - 33578:33577
+    environment:
+      PORT: 33574
+      KEYSPACES: "shadow"
+      NUM_SHARDS: "1"
+      MYSQL_BIND_HOST: "0.0.0.0"
+      FOREIGN_KEY_MODE: "disallow"
+
+  vitess-shadow-8_0:
+    image: vitess/vttestserver:mysql80@sha256:5fec546e3f2ba50237b78938982a72bf17eacbc97f18ab877774f22d6e2e9682
+    restart: always
+    ports:
+      - 33808:33807
+    environment:
+      PORT: 33804
+      KEYSPACES: "shadow"
+      NUM_SHARDS: "1"
+      MYSQL_BIND_HOST: "0.0.0.0"
+      FOREIGN_KEY_MODE: "disallow"
+
   mssql-2019:
     image: mcr.microsoft.com/mssql/server:2019-latest
     restart: always
     environment:
-      ACCEPT_EULA: Y
+      ACCEPT_EULA: "Y"
       SA_PASSWORD: "<YourStrong@Passw0rd>"
     ports:
       - "1433:1433"
     networks:
       - databases
-    tmpfs: /var/lib/mssql
+
+  mssql-2017:
+    image: mcr.microsoft.com/mssql/server:2017-latest
+    restart: always
+    environment:
+      ACCEPT_EULA: "Y"
+      SA_PASSWORD: "<YourStrong@Passw0rd>"
+    ports:
+      - "1434:1433"
+    networks:
+      - databases
+
+  mongo4:
+    image: prismagraphql/mongo-single-replica:4.4.3-bionic
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: "prisma"
+      MONGO_INITDB_ROOT_PASSWORD: "prisma"
+    ports:
+      - "27019:27017"
+    networks:
+      - databases
+
+  mongo4-single:
+    image: mongo:4
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: "prisma"
+      MONGO_INITDB_ROOT_PASSWORD: "prisma"
+    ports:
+      - "27017:27017"
+    networks:
+      - databases
+
+  mongo5-single:
+    image: mongo:5
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: "prisma"
+      MONGO_INITDB_ROOT_PASSWORD: "prisma"
+    ports:
+      - "27018:27017"
+    networks:
+      - databases
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: "prisma"
+      ME_CONFIG_MONGODB_ADMINPASSWORD: "prisma"
+      ME_CONFIG_MONGODB_URL: mongodb://prisma:prisma@mongo4-single:27017/
+    networks:
+      - databases
+
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    restart: always
+    ports:
+      - "16686:16686" # the trace viewer (http)
+    networks:
+      - telemetry
+
+  otel-agent:
+    image: otel/opentelemetry-collector-dev:latest
+    command: ["--config=/etc/otel-agent-config.yaml"]
+    restart: always
+    volumes:
+      - ./otel-agent-config.yaml:/etc/otel-agent-config.yaml
+    ports:
+      - "4317:4317" # OTLP gRPC receiver
+    depends_on:
+      - jaeger
+    networks:
+      - telemetry
 
 networks:
   databases:
+  telemetry:
