--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "latest": "npm i @prisma/cli@dev && npm i @prisma/client@dev",
-        "prismation": "npx prisma generate && npx prisma migrate save --experimental && npx prisma migrate up --experimental"
+        "latest": "npm i prisma@dev && npm i @prisma/client@dev",
+        "archive": "mv ./migrations ./migrations_archive",
+        "test": "ts-node index.ts",
+        "reset": "npx prisma migrate reset --force",
+        "start-dbs": "docker-compose up -d"
     },
     "keywords": [],
     "author": "",
