--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
     "main": "index.js",
     "scripts": {
         "latest": "npm i prisma@dev && npm i @prisma/client@dev",
-        "archive": "mv ./migrations ./migrations_archive",
+        "archive": "mv ./prisma/migrations ./migrations_archive",
         "test": "ts-node index.ts",
         "reset": "npx prisma migrate reset --force",
-        "start-dbs": "docker-compose up -d"
+        "start-dbs": "docker-compose -f docker-compose.yml up -d --remove-orphans postgres13"
+    },
+    "prisma": {
+        "seed": "ts-node prisma/seed.ts"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "prisma": "^2.19.0",
+        "@types/node": "^18.11.9",
+        "prisma": "^4.6.0-dev.48",
         "ts-node": "^9.1",
         "typescript": "^4.1"
     },
     "dependencies": {
-        "@prisma/client": "^2.19.0"
+        "@prisma/client": "^4.6.0-dev.48"
     }
 }
